fixed problem with calculator button borders overlapping.

--- a/public/css/calculator.css
+++ b/public/css/calculator.css
@@ -20,7 +20,7 @@ body {
 #zeroBtn {
     text-align: left;
     padding-left:23px;
-    border-left: solid 1px black;
+    border-left: none;
 }
 
 .num_button:focus, .op_button:focus, .equals_button:focus, .spec_button:focus{
@@ -118,23 +118,20 @@ body {
     color: white;
     font-weight: 300;
     font-size: 47.5px;
-    border-top: 1px solid black;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: none;
+    border: none;
     padding-top: 24px;
     line-height: 30px;
     height:80px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 
 }
 #equalsBtn {
     padding-left: 13px;
 }
 .equals_button {
-    border-bottom-right-radius: 4px;
-    border-botom:1px solid black;
+    border-bottom-right-radius: 6px;
+    border-botom:none;
     background-color:#ff8c00;
     color: white;
     height:48px;
@@ -149,13 +146,14 @@ body {
 .container {
     width:235px;
     background-color:transparent;
+    border: 1px solid rgba(0, 0, 0, .5);
+    border-radius: 7px
 }
 
 #calculator_holder  {
     width: 235px;
     margin-left: 25%;
     margin-top: 10%;
-    border: none;
     background-color:transparent;
     box-shadow: 0px 20px 100px -5px #575757;
 
@@ -164,7 +162,7 @@ body {
 .op_button {
     background-color:#ff8c00;
     color: white;
-    border-right: 1px solid black;
+    border-right: none;
     height: 48px;
 }
 
@@ -180,7 +178,7 @@ body {
 
 .row_5 > button {
     border-top:1px solid #b0b0b0;
-    border-bottom:1px solid black;
+    border-bottom:none;
     margin-top:0px;
     margin-bottom:0px;
 }
@@ -199,7 +197,7 @@ body {
 
 button.col_4 {
     border-left:1px solid #b0b0b0;
-    border-right:1px solid black;
+    border-right:none;
     margin-top:0px;
     margin-bottom:0px;
 }
@@ -212,14 +210,14 @@ button.col_2, button.col_3 {
 }
 
 button.col_1 {
-    border-left: 1px solid black;
+    border-left: none;
     border-right: none;
 }
 
 
 
 #zeroBtn {
-    border-bottom-left-radius:5px;
+    border-bottom-left-radius:6px;
 }
 
 
